building out navigation

--- a/src/Euclid.Console.Web/Views/Shared/SitewideNavigation.cshtml
+++ b/src/Euclid.Console.Web/Views/Shared/SitewideNavigation.cshtml
@@ -2,35 +2,26 @@
 	<li><a href="/" title="" class="dashboard no-submenu">Dashboard</a></li>
 	<!-- Use class .no-submenu to open link instead of a sub menu-->
 	<!-- Use class .current to open submenu on page load -->
-	<li class="current"><a href="" title="" class="projects">Projects</a><span title="You have 3 new tasks">3</span>
-		<ul>
-			<li class="current"><a href="#" title="">Sample Index Page</a></li>
-			<li><a href="#" title="">Error 401</a></li>
-			<li><a href="#" title="">Error 403</a></li>
-			<li><a href="#" title="">Error 404</a></li>
-			<li><a href="#" title="">Error 500</a></li>
-			<li><a href="#" title="">Error 503</a></li>
-			<li><a href="#" title="">Sample Login Page</a></li>
+	<li><a href="" title="" class="articles">Agents</a>
+			<ul>
+			<li><a href="#">Installed Agents</a></li>
+			<li><a href="#">Configuration</a></li>
+			<li><a href="#">Agent Gallery</a></li>
 		</ul>
 	</li>
-	<li><a href="" title="" class="products">Products</a>
+	<li><a href="" title="" class="gallery">Commands</a><span title="There are 23 new log entries">23</span>
 		<ul>
-			<li><a href="" title="">Add Product</a></li>
-			<li><a href="" title="">Edit Product</a></li>
-			<li><a href="" title="">Product Management</a></li>
-			<li><a href="" title="">Some very long link with a lot of words</a></li>
+			<li><a href="#">Command Registry</a></li>
+			<li><a href="#">Interactive Console</a></li>
+			<li><a href="#">Log</a></li>
 		</ul>
 	</li>
-	<li><a href="" title="" class="events">Events</a>
+	<li><a href="" title="" class="gallery">Events</a><span title="There are 47 new log entries">47</span>
 		<ul>
-			<li><a href="" title="">My Events</a></li>
-			<li><a href="" title="">Add Event</a></li>
-			<li><a href="" title="">Edit Event</a></li>
-			<li><a href="" title="">Event Management</a></li>
-			<li><a href="" title="">Settings</a></li>
-		</ul>
+			<li><a href="#">Event Registry</a></li>
+			<li><a href="#">Interactive Console</a></li>
+			<li><a href="#">Log</a></li>
+		</ul>	
 	</li>
-	<li><a href="" title="" class="articles">Articles</a></li>
-	<li><a href="" title="" class="gallery">Image Gallery</a><span title="You have 47 new tasks">47</span></li>
-	<li><a href="" title="" class="settings">Settings</a></li>
+	<li class="current"><a href="" title="" class="settings no-submenu">Setup</a></li>
 </ul>
