--- a/src/Euclid.Console.Web/Views/Shared/_Layout.cshtml
+++ b/src/Euclid.Console.Web/Views/Shared/_Layout.cshtml
@@ -62,7 +62,7 @@
 			<div class="article-container">
 				<!-- Article Header -->
 				<header>
-					<h2>Chromatron Admin Theme</h2>
+					<h2>@ViewBag.Title</h2>
 				</header>
 				<!-- /Article Header -->
 				<!-- Article Content -->
