--- a/src/Euclid.Console.Web/Views/Shared/_Layout.cshtml
+++ b/src/Euclid.Console.Web/Views/Shared/_Layout.cshtml
@@ -7,25 +7,11 @@
 <!--<![endif]-->
 <head>
 	<title>@ViewBag.Title</title>
-	<meta charset="UTF-8">
-	<meta name="description" content="">
-	<meta name="author" content="">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	@RenderPage("Header/Meta.cshtml")
 	<link rel="shortcut icon" href="@Url.Content("~/Content/chromatron/img/favicon.ico")">
 	<link rel="apple-touch-icon" href="@Url.Content("~/Content/chromatron/img/apple-touch-icon.png")">
-	<link href="@Url.Content("~/Content/chromatron/css/style.css")" rel="stylesheet" type="text/css" />
-	<link href="@Url.Content("~/Content/chromatron/css/colors.css")" rel="stylesheet" type="text/css" />
-	<link href="@Url.Content("~/Content/chromatron/css/jquery.tipsy.css")" rel="stylesheet" type="text/css" />
-	<link href="@Url.Content("~/Content/chromatron/css/jquery.wysiwyg.css")" rel="stylesheet" type="text/css" />
-	<link href="@Url.Content("~/Content/chromatron/css/jquery.datatables.css")" rel="stylesheet" type="text/css" />
-	<link href="@Url.Content("~/Content/chromatron/css/jquery.facebox.css")" rel="stylesheet" type="text/css" />
-	<link href="@Url.Content("~/Content/chromatron/css/jquery.datepicker.css")" rel="stylesheet" type="text/css" />
-	<link href="@Url.Content("~/Content/chromatron/css/jquery.fileinput.css")" rel="stylesheet" type="text/css" />
-	<link href="@Url.Content("~/Content/chromatron/css/jquery.fullcalendar.css")" rel="stylesheet" type="text/css" />
-	<link href="@Url.Content("~/Content/chromatron/css/jquery.visualize.css")" rel="stylesheet" type="text/css" />
-	<link href="http://fonts.googleapis.com/css?family=PT+Sans:regular,italic,bold,bolditalic"
-		rel='stylesheet' type='text/css'>
-	<script src="@Url.Content("~/Content/chromatron/js/libs/modernizr-1.7.min.js")" type="text/javascript"></script>
+	@RenderPage("Header/Styles.cshtml")
+	@RenderPage("Header/Scripts.cshtml")
 </head>
 <body>
 	<!-- Right Rail -->
@@ -35,11 +21,11 @@
 			<h1>Lorem ipsum dolor sit amet!</h1>
 		</header>
 		<!-- Badge -->
-		@RenderPage("Badge.cshtml")
+		@RenderPage("RightRail/Badge.cshtml")
 		<!-- /Badge -->
 		<!-- Main Navigation -->
 		<nav id="main-nav">
-			@RenderPage("SitewideNavigation.cshtml")
+			@RenderPage("RightRail/SitewideNavigation.cshtml")
 		</nav>
 		<!-- /Main Navigation -->
 		<!-- Sidebar Content -->
@@ -50,10 +36,10 @@
 	<!-- Main Content -->
 	<section role="main">
 		<!-- InfoWidget Header Container -->
-		@RenderPage("InfoWidgetsHeader.cshtml")
+		@RenderPage("Header/InfoWidgets.cshtml")
 		<!-- /InfoWidget Header Container -->
 		<!-- Breadcumbs -->
-		@RenderPage("BreadcrumbsHeader.cshtml")
+		@RenderPage("Header/Breadcrumbs.cshtml")
 		<!-- /Breadcumbs -->
 		<!-- Body Content -->
 		<article class="full-block clearfix">
@@ -62,19 +48,6 @@
 		<!-- /Body Content -->
 	</section>
 	<!-- /Main Content -->
-	<!-- JS Libs at the end for faster loading -->
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js" type="text/javascript"></script>
-	<script type="text/javascript">		!window.jQuery && document.write(unescape('%3Cscript src="js/jquery/jquery-1.5.1.min.js"%3E%3C/script%3E'))</script>
-	<script src="@Url.Content("~/Content/chromatron/js/libs/selectivizr.js")" type="text/javascript"></script>
-	<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.facebox.js")" type="text/javascript"></script>
-	<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.tipsy.js")" type="text/javascript"></script>
-	<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.wysiwyg.js")" type="text/javascript"></script>
-	<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.datatables.js")" type="text/javascript"></script>
-	<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.datepicker.js")" type="text/javascript"></script>
-	<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.fileinput.js")" type="text/javascript"></script>
-	<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.fullcalendar.js")" type="text/javascript"></script>
-	<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.visualize.js")" type="text/javascript"></script>
-	<script src="@Url.Content("~/Content/chromatron/js/libs/excanvas.js")" type="text/javascript"></script>
-	<script src="@Url.Content("~/Content/chromatron/js/script.js")" type="text/javascript"></script>
+	@RenderPage("Footer/Scripts.cshtml")
 </body>
 </html>
