working on forum templates

--- a/apps/PublicForum/Views/Shared/_Layout.cshtml
+++ b/apps/PublicForum/Views/Shared/_Layout.cshtml
@@ -2,16 +2,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-ca">
 	<head>
 		<title>@ViewBag.Title</title>
-		<link rel="stylesheet" type="text/css" href="../../Content/swiss/style.css" media="screen" />
-		<link rel="stylesheet" type="text/css" href="../../Content/swiss/custom.css" media="screen" />
-		<link rel="shortcut icon" href="../../Content/swiss/favicon.png" type="image/x-icon" />
+		<link rel="stylesheet" type="text/css" href="../../Content/themes/swiss/style.css" media="screen" />
+		<link rel="stylesheet" type="text/css" href="../../Content/themes/swiss/custom.css" media="screen" />
+		<link rel="shortcut icon" href="../../Content/themes/swiss/favicon.png" type="image/x-icon" />
 		<script src="../../Scripts/jquery-1.5.1.js" type="text/javascript"> </script>
 	</head>
 	<body id="vanilla_discussions_index" class="Vanilla Discussions index ">
 		<div id="wrapper">
 			<div id="Head">
 				<div id="logo" class="sidebar-block">
-					<a href="#"><img src="../../Content/swiss/images/logo.gif" alt="" /></a>
+					<a href="#"><img src="../../Content/themes/swiss/images/logo.gif" alt="" /></a>
 				</div>
 				<div id="menu" class="sidebar-block">
 					<ul>
