--- a/apps/PublicForum/Views/Post/List.cshtml
+++ b/apps/PublicForum/Views/Post/List.cshtml
@@ -5,7 +5,7 @@
 <ul class="DataList Discussions">
 	<li class="Item Alt  Announcement">
 		<div class="Options">
-			<a href="#addbookmark" class="Bookmark" title="Bookmark"><span class="Star"><img src="../../Content/swiss/images/pixel.png" alt="Bookmark" /></span></a>         
+			<a href="#addbookmark" class="Bookmark" title="Bookmark"><span class="Star"><img src="../../Content/themes/swiss/images/pixel.png" alt="Bookmark" /></span></a>         
 			<ul class="Options"> 
 				<li> 
 					<strong>Options</strong> 
@@ -17,31 +17,80 @@
 		</div>   
 		<div class="ItemContent Discussion">
 			@Html.ActionLink("Forum Etiquette", "Thread", "Post", new {@class = "Title"})
-
 			<div class="Meta">
 				<span class="Announcement">Pinned</span> 
 				<span class="CommentCount">1 comment</span> 
-				<span class="LastCommentBy">Started by <a href="../../Content/swiss/profile/2/test">test</a></span>
+				<span class="LastCommentBy">Started by <a href="#user">test</a></span>
 				<span class="LastCommentDate">July 14</span>
 				<span>@Html.ActionLink("Nested Category", "Thread", "Post", new {category = "nested-category"}, new {@class = "Category"})</span>
 			</div>
 		</div>
-
 	</li>
 	<li class="Item Alt ">
-
 		<div class="ItemContent Discussion">
 			@Html.ActionLink("Lorem ipsum", "Thread", "Post", new {@class = "Title"})
-
 			<div class="Meta">
 				<span class="CommentCount">1 comment</span> 
-				<span class="LastCommentBy">Started by <a href="../../Content/swiss/profile/2/test">test</a></span>
+				<span class="LastCommentBy">Started by <a href="#user">test</a></span>
 				<span class="LastCommentDate">July 14</span>
 				<span>@Html.ActionLink("Nested Category", "Thread", "Post", new {category = "nested-category"}, new {@class = "Category"})</span>
 			</div>
-
 		</div>
-
+	</li>
+	<li class="Item">
+		<div class="ItemContent Discussion">
+			@Html.ActionLink("Lorem ipsum", "Thread", "Post", new {@class = "Title"})
+			<div class="Meta">
+				<span class="CommentCount">1 comment</span> 
+				<span class="LastCommentBy">Started by <a href="#user">test</a></span>
+				<span class="LastCommentDate">July 14</span>
+				<span>@Html.ActionLink("Nested Category", "Thread", "Post", new {category = "nested-category"}, new {@class = "Category"})</span>
+			</div>
+		</div>
+	</li>
+	<li class="Item Alt ">
+		<div class="ItemContent Discussion">
+			@Html.ActionLink("Lorem ipsum", "Thread", "Post", new {@class = "Title"})
+			<div class="Meta">
+				<span class="CommentCount">1 comment</span> 
+				<span class="LastCommentBy">Started by <a href="#user">test</a></span>
+				<span class="LastCommentDate">July 14</span>
+				<span>@Html.ActionLink("Nested Category", "Thread", "Post", new {category = "nested-category"}, new {@class = "Category"})</span>
+			</div>
+		</div>
+	</li>
+	<li class="Item">
+		<div class="ItemContent Discussion">
+			@Html.ActionLink("Lorem ipsum", "Thread", "Post", new {@class = "Title"})
+			<div class="Meta">
+				<span class="CommentCount">1 comment</span> 
+				<span class="LastCommentBy">Most recent by <a href="#user">test</a></span>
+				<span class="LastCommentDate">July 14</span>
+				<span>@Html.ActionLink("Nested Category", "Thread", "Post", new {category = "nested-category"}, new {@class = "Category"})</span>
+			</div>
+		</div>
+	</li>
+	<li class="Item Alt ">
+		<div class="ItemContent Discussion">
+			@Html.ActionLink("Lorem ipsum", "Thread", "Post", new {@class = "Title"})
+			<div class="Meta">
+				<span class="CommentCount">1 comment</span> 
+				<span class="LastCommentBy">Started by <a href="#user">test</a></span>
+				<span class="LastCommentDate">July 14</span>
+				<span>@Html.ActionLink("Nested Category", "Thread", "Post", new {category = "nested-category"}, new {@class = "Category"})</span>
+			</div>
+		</div>
+	</li>
+	<li class="Item">
+		<div class="ItemContent Discussion">
+			@Html.ActionLink("Lorem ipsum", "Thread", "Post", new {@class = "Title"})
+			<div class="Meta">
+				<span class="CommentCount">1 comment</span> 
+				<span class="LastCommentBy">Started by <a href="#user">test</a></span>
+				<span class="LastCommentDate">July 14</span>
+				<span>@Html.ActionLink("Nested Category", "Thread", "Post", new {category = "nested-category"}, new {@class = "Category"})</span>
+			</div>
+		</div>
 	</li>
 </ul>
 
