added lorem ipsum to flesh out the examples

--- a/apps/PublicForum/Views/Post/List.cshtml
+++ b/apps/PublicForum/Views/Post/List.cshtml
@@ -20,7 +20,7 @@
 			<div class="Meta">
 				<span class="Announcement">Pinned</span> 
 				<span class="CommentCount">1 comment</span> 
-				<span class="LastCommentBy">Started by <a href="#user">test</a></span>
+				<span class="LastCommentBy">Started by <a href="#user">smhinsey</a></span>
 				<span class="LastCommentDate">July 14</span>
 				<span>@Html.ActionLink("Nested Category", "Thread", "Post", new {category = "nested-category"}, new {@class = "Category"})</span>
 			</div>
@@ -31,7 +31,7 @@
 			@Html.ActionLink("Lorem ipsum", "Thread", "Post", new {@class = "Title"})
 			<div class="Meta">
 				<span class="CommentCount">1 comment</span> 
-				<span class="LastCommentBy">Started by <a href="#user">test</a></span>
+				<span class="LastCommentBy">Started by <a href="#user">smhinsey</a></span>
 				<span class="LastCommentDate">July 14</span>
 				<span>@Html.ActionLink("Nested Category", "Thread", "Post", new {category = "nested-category"}, new {@class = "Category"})</span>
 			</div>
@@ -42,7 +42,7 @@
 			@Html.ActionLink("Lorem ipsum", "Thread", "Post", new {@class = "Title"})
 			<div class="Meta">
 				<span class="CommentCount">1 comment</span> 
-				<span class="LastCommentBy">Started by <a href="#user">test</a></span>
+				<span class="LastCommentBy">Started by <a href="#user">smhinsey</a></span>
 				<span class="LastCommentDate">July 14</span>
 				<span>@Html.ActionLink("Nested Category", "Thread", "Post", new {category = "nested-category"}, new {@class = "Category"})</span>
 			</div>
@@ -53,7 +53,7 @@
 			@Html.ActionLink("Lorem ipsum", "Thread", "Post", new {@class = "Title"})
 			<div class="Meta">
 				<span class="CommentCount">1 comment</span> 
-				<span class="LastCommentBy">Started by <a href="#user">test</a></span>
+				<span class="LastCommentBy">Started by <a href="#user">smhinsey</a></span>
 				<span class="LastCommentDate">July 14</span>
 				<span>@Html.ActionLink("Nested Category", "Thread", "Post", new {category = "nested-category"}, new {@class = "Category"})</span>
 			</div>
@@ -64,7 +64,7 @@
 			@Html.ActionLink("Lorem ipsum", "Thread", "Post", new {@class = "Title"})
 			<div class="Meta">
 				<span class="CommentCount">1 comment</span> 
-				<span class="LastCommentBy">Most recent by <a href="#user">test</a></span>
+				<span class="LastCommentBy">Most recent by <a href="#user">smhinsey</a></span>
 				<span class="LastCommentDate">July 14</span>
 				<span>@Html.ActionLink("Nested Category", "Thread", "Post", new {category = "nested-category"}, new {@class = "Category"})</span>
 			</div>
@@ -75,7 +75,7 @@
 			@Html.ActionLink("Lorem ipsum", "Thread", "Post", new {@class = "Title"})
 			<div class="Meta">
 				<span class="CommentCount">1 comment</span> 
-				<span class="LastCommentBy">Started by <a href="#user">test</a></span>
+				<span class="LastCommentBy">Started by <a href="#user">smhinsey</a></span>
 				<span class="LastCommentDate">July 14</span>
 				<span>@Html.ActionLink("Nested Category", "Thread", "Post", new {category = "nested-category"}, new {@class = "Category"})</span>
 			</div>
@@ -86,7 +86,7 @@
 			@Html.ActionLink("Lorem ipsum", "Thread", "Post", new {@class = "Title"})
 			<div class="Meta">
 				<span class="CommentCount">1 comment</span> 
-				<span class="LastCommentBy">Started by <a href="#user">test</a></span>
+				<span class="LastCommentBy">Started by <a href="#user">smhinsey</a></span>
 				<span class="LastCommentDate">July 14</span>
 				<span>@Html.ActionLink("Nested Category", "Thread", "Post", new {category = "nested-category"}, new {@class = "Category"})</span>
 			</div>
