--- a/apps/PublicForum/Views/Post/Thread.cshtml
+++ b/apps/PublicForum/Views/Post/Thread.cshtml
@@ -3,7 +3,7 @@
 }
 <div class="DiscussionWrapper">
 	<div class="Tabs HeadingTabs DiscussionTabs">
-		<div class="SubTab">Weddings</div>
+		<div class="SubTab">Lorem Ipsum</div>
 		<ul>
 			<li><a href="/swiss/discussions">All Discussions</a></li>
 		</ul>
@@ -15,18 +15,18 @@
 			<div class="Comment">
 				<div class="Meta">
 					<span class="Author">
-						<a title="oryalexander" href="/swiss/profile/41/oryalexander">
-							<img src="https://secure.gravatar.com/avatar.php?gravatar_id=30e227e40e0bdcbaf52744348e900802&amp;default=http%3A%2F%2Fsalumguilher.me%2Fswiss%2Fplugins%2FGravatar%2Fdefault.gif&amp;size=40" alt="oryalexander" />
+						<a title="smhinsey" href="#user">
+							<img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=140&d=https://gs1.wac.edgecastcdn.net/80460E/assets%2Fimages%2Fgravatars%2Fgravatar-140.png" alt="smhinsey" />
 						</a>
-						<a href="/swiss/profile/41/oryalexander">oryalexander</a>
+						<a href="#user">smhinsey</a>
 					</span>
 					<br />
 					<span class="DateCreated">June 19 </span>
-					<span class="Permalink"><a href="/swiss/discussion/48/weddings/p1" class="Permalink" name="Item_1" rel="nofollow">Permalink</a> </span>
+					<span class="Permalink"><a href="#permalink" class="Permalink" name="Item_1" rel="nofollow">Permalink</a> </span>
 					<div class="CommentInfo"></div>
 				</div>
 				<div class="Message">
-					Let's talk about weddings and events!
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eleifend facilisis purus id facilisis. Nulla egestas tempus massa id porta. Pellentesque id nibh turpis. Fusce lobortis adipiscing vulputate. Suspendisse viverra turpis eget eros mollis vel scelerisque nibh fringilla.
 				</div>
 			</div>
 		</li>
@@ -34,18 +34,18 @@
 			<div class="Comment">
 				<div class="Meta">
 					<span class="Author">
-						<a title="oryalexander" href="/swiss/profile/41/oryalexander">
-							<img src="https://secure.gravatar.com/avatar.php?gravatar_id=30e227e40e0bdcbaf52744348e900802&amp;default=http%3A%2F%2Fsalumguilher.me%2Fswiss%2Fplugins%2FGravatar%2Fdefault.gif&amp;size=40" alt="oryalexander" />
+						<a title="smhinsey" href="#user">
+							<img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=140&d=https://gs1.wac.edgecastcdn.net/80460E/assets%2Fimages%2Fgravatars%2Fgravatar-140.png" alt="smhinsey" />
 						</a>
-						<a href="/swiss/profile/41/oryalexander">oryalexander</a>
+						<a href="#user">smhinsey</a>
 					</span>
 					<br />
 					<span class="DateCreated">June 19 </span>
-					<span class="Permalink"><a href="/swiss/discussion/48/weddings/p1" class="Permalink" name="Item_1" rel="nofollow">Permalink</a> </span>
+					<span class="Permalink"><a href="#permalink" class="Permalink" name="Item_1" rel="nofollow">Permalink</a> </span>
 					<div class="CommentInfo"></div>
 				</div>
 				<div class="Message">
-					Let's talk about weddings and events!
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eleifend facilisis purus id facilisis. Nulla egestas tempus massa id porta. Pellentesque id nibh turpis. Fusce lobortis adipiscing vulputate. Suspendisse viverra turpis eget eros mollis vel scelerisque nibh fringilla.
 				</div>
 			</div>
 		</li>
@@ -53,18 +53,18 @@
 			<div class="Comment">
 				<div class="Meta">
 					<span class="Author">
-						<a title="oryalexander" href="/swiss/profile/41/oryalexander">
-							<img src="https://secure.gravatar.com/avatar.php?gravatar_id=30e227e40e0bdcbaf52744348e900802&amp;default=http%3A%2F%2Fsalumguilher.me%2Fswiss%2Fplugins%2FGravatar%2Fdefault.gif&amp;size=40" alt="oryalexander" />
+						<a title="smhinsey" href="#user">
+							<img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=140&d=https://gs1.wac.edgecastcdn.net/80460E/assets%2Fimages%2Fgravatars%2Fgravatar-140.png" alt="smhinsey" />
 						</a>
-						<a href="/swiss/profile/41/oryalexander">oryalexander</a>
+						<a href="#user">smhinsey</a>
 					</span>
 					<br />
 					<span class="DateCreated">June 19 </span>
-					<span class="Permalink"><a href="/swiss/discussion/48/weddings/p1" class="Permalink" name="Item_1" rel="nofollow">Permalink</a> </span>
+					<span class="Permalink"><a href="#permalink" class="Permalink" name="Item_1" rel="nofollow">Permalink</a> </span>
 					<div class="CommentInfo"></div>
 				</div>
 				<div class="Message">
-					Let's talk about weddings and events!
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eleifend facilisis purus id facilisis. Nulla egestas tempus massa id porta. Pellentesque id nibh turpis. Fusce lobortis adipiscing vulputate. Suspendisse viverra turpis eget eros mollis vel scelerisque nibh fringilla.
 				</div>
 			</div>
 		</li>
@@ -72,18 +72,18 @@
 			<div class="Comment">
 				<div class="Meta">
 					<span class="Author">
-						<a title="oryalexander" href="/swiss/profile/41/oryalexander">
-							<img src="https://secure.gravatar.com/avatar.php?gravatar_id=30e227e40e0bdcbaf52744348e900802&amp;default=http%3A%2F%2Fsalumguilher.me%2Fswiss%2Fplugins%2FGravatar%2Fdefault.gif&amp;size=40" alt="oryalexander" />
+						<a title="smhinsey" href="#user">
+							<img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=140&d=https://gs1.wac.edgecastcdn.net/80460E/assets%2Fimages%2Fgravatars%2Fgravatar-140.png" alt="smhinsey" />
 						</a>
-						<a href="/swiss/profile/41/oryalexander">oryalexander</a>
+						<a href="#user">smhinsey</a>
 					</span>
 					<br />
 					<span class="DateCreated">June 19 </span>
-					<span class="Permalink"><a href="/swiss/discussion/48/weddings/p1" class="Permalink" name="Item_1" rel="nofollow">Permalink</a> </span>
+					<span class="Permalink"><a href="#permalink" class="Permalink" name="Item_1" rel="nofollow">Permalink</a> </span>
 					<div class="CommentInfo"></div>
 				</div>
 				<div class="Message">
-					Let's talk about weddings and events!
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eleifend facilisis purus id facilisis. Nulla egestas tempus massa id porta. Pellentesque id nibh turpis. Fusce lobortis adipiscing vulputate. Suspendisse viverra turpis eget eros mollis vel scelerisque nibh fringilla.
 				</div>
 			</div>
 		</li>
