beginning command->input model bi-directional map

--- a/tests/Euclid.Composites.MetadataHost/Content/euclid-default-styles.css
+++ b/tests/Euclid.Composites.MetadataHost/Content/euclid-default-styles.css
@@ -3,6 +3,7 @@
     text-decoration: underline;
     margin-top: 15px;
     margin-bottom: 15px;
+    font-size: 16pt;
 }
 
 .property-set {
@@ -15,5 +16,9 @@
 }
 
 .property-value 
+{
+}
+
+.agent-name
 {
 }
