--- a/tests/Euclid.Composites.MetadataHost/Views/Agent/Operations.cshtml
+++ b/tests/Euclid.Composites.MetadataHost/Views/Agent/Operations.cshtml
@@ -1,12 +1,4 @@
-
-D:\Projects\Euclid\platform>@git.exe %*
-﻿@using Euclid.Framework.Cqrs.Metadata
-@model IAgentMetadata
+@using Euclid.Framework.Cqrs.Metadata
+@model IAgentInfo
 
 @Html.DisplayForModel("IAgentMetadata")
-
-D:\Projects\Euclid\platform>@set ErrorLevel=%ErrorLevel%
-
-D:\Projects\Euclid\platform>@rem Restore the original console codepage.
-
-D:\Projects\Euclid\platform>@chcp %cp_oem% > nul < nul
