--- a/tests/Euclid.Composites.MetadataHost/Views/Command/List.cshtml
+++ b/tests/Euclid.Composites.MetadataHost/Views/Command/List.cshtml
@@ -5,13 +5,13 @@
 
 <ul>
     <li>
-        @Model.ElementAt(0).AgentMetadata.CommandNamespace
+        @Model.ElementAt(0).AgentInfo.CommandNamespace
         <ul>
         @foreach (var m in Model)
         {
-            var agentMetadata = m.AgentMetadata;
+            var agentMetadata = m.AgentInfo;
             <li>
-                <a href="@Url.Action("Inspect", "Command", new { scheme = agentMetadata.Scheme, systemName = agentMetadata.SystemName, command = m.CommandMetadata.Name })">
+                <a href="@Url.Action("Inspect", "Command", new { systemName = agentMetadata.SystemName, command = m.CommandMetadata.Name })">
                    @m.CommandMetadata.Name
                 </a>
             </li>
