--- a/tests/Euclid.Composites.MetadataHost/Views/Shared/_Layout.cshtml
+++ b/tests/Euclid.Composites.MetadataHost/Views/Shared/_Layout.cshtml
@@ -1,9 +1,6 @@
-
-D:\Projects\Euclid\platform>@git.exe %*
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
     <title>@ViewBag.Title</title>
     <link href="@Url.Content("~/Content/euclid-default-styles.css")" rel="stylesheet" type="text/css"/>
     <script src="@Url.Content("~/Scripts/jquery-1.5.1.min.js")" type="text/javascript"></script>
@@ -14,9 +11,3 @@ D:\Projects\Euclid\platform>@git.exe %*
     @RenderBody()
 </body>
 </html>
-
-D:\Projects\Euclid\platform>@set ErrorLevel=%ErrorLevel%
-
-D:\Projects\Euclid\platform>@rem Restore the original console codepage.
-
-D:\Projects\Euclid\platform>@chcp %cp_oem% > nul < nul
