Finished metadata refactor, all unit tests passing (MVC untested)

--- a/tests/Euclid.Composites.MetadataHost/Views/Agent/Operations.cshtml
+++ b/tests/Euclid.Composites.MetadataHost/Views/Agent/Operations.cshtml
@@ -1,4 +1,6 @@
+@using Euclid.Agent.Metadata
 @using Euclid.Framework.Cqrs.Metadata
-@model IAgentInfo
+@using Euclid.Framework.Metadata
+@model IAgentMetadata
 
 @Html.DisplayForModel("IAgentMetadata")
