--- a/tests/Euclid.Composites.MetadataHost/Views/Shared/EditorTemplates/ListOfProperties.cshtml
+++ b/tests/Euclid.Composites.MetadataHost/Views/Shared/EditorTemplates/ListOfProperties.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Euclid.Framework.Cqrs.Metadata
-@model IEnumerable<IMetadata>
+@using Euclid.Framework.Metadata
+@model IEnumerable<IMetadataOriginal>
 
 <fieldset>
     @foreach (var prop in @Model)
