--- a/tests/Euclid.Composites.MetadataHost/Views/Shared/DisplayTemplates/IAgentMetadata.cshtml
+++ b/tests/Euclid.Composites.MetadataHost/Views/Shared/DisplayTemplates/IAgentMetadata.cshtml
@@ -1,5 +1,7 @@
+@using Euclid.Agent.Metadata
 @using Euclid.Framework.Cqrs.Metadata
-@model IAgentInfo
+@using Euclid.Framework.Metadata
+@model IAgentMetadata
            
 <fieldset>
     <div class="model-header">
