asmx like UI for commands and input-models

--- a/tests/Euclid.Composite.MvcApplication/Views/Command/List.cshtml
+++ b/tests/Euclid.Composite.MvcApplication/Views/Command/List.cshtml
@@ -1,4 +1,4 @@
-﻿@using Euclid.Composites.Mvc.Models
+﻿@using Euclid.Composite.MvcApplication.Models
 @model CommandMetadataModel
 
 <div class="model-header">@ViewBag.Title</div>
