--- a/tests/Euclid.Composite.MvcApplication/Views/Command/Inspect.cshtml
+++ b/tests/Euclid.Composite.MvcApplication/Views/Command/Inspect.cshtml
@@ -1,14 +1,16 @@
-@using Euclid.Composites.Models
-@using Euclid.Framework.Models
-@model IInputModel
+@using Euclid.Composites.Mvc.Extensions
+@model Euclid.Framework.Models.IInputModel
 
-<div class="model-header">@Model.CommandType.FullName</div>
+<div class="model-header">input form for @Model.CommandType.Name</div>
 
 @using (Html.BeginForm())
-{
-    <input type="hidden" name="AgentSystemName" value="@Model.AgentSystemName"/>
+{   
+     @Html.ValidationSummary(true)
     
-    @Html.EditorFor(p => Model.Properties, "ListOfProperties")
+    <fieldset>
+        @Html.EditorFor(p => Model)
+    </fieldset>
+    
 
     <input type="submit" value="Publish Command" /> 
 }
