fixed up agent metadata display

--- a/tests/Euclid.Composite.MvcApplication/Views/Shared/DisplayTemplates/IAgentMetadata.cshtml
+++ b/tests/Euclid.Composite.MvcApplication/Views/Shared/DisplayTemplates/IAgentMetadata.cshtml
@@ -17,7 +17,12 @@
     </div>
 
     <div class="property-set">
-        <div class="property-label">Html.LabelFor(x => x.Commands.Namespace)</div>
+        
+        @* 
+        jt: not really sure why theo following doesn't work
+        Html.LabelFor(x => x.Commands.Namespace)
+        *@
+        <div class="property-label">Command Namespace</div>
         <div class="property-value">
             <a href="@Url.Action("List", "Command", new {AgentSystemName = Model.SystemName})">
                 @Model.Commands.Namespace
@@ -26,7 +31,18 @@
     </div>
     
     <div class="property-set">
-        <div class="property-label">Html.LabelFor(x => x.Queries.Namespace)</div>
-        <div class="property-value">Model.Queries.Namespace</div>
+        @*
+        // Html.LabelFor(x => x.Queries.Namespace)
+        *@
+        <div class="property-label">Query Namespace</div>
+        <div class="property-value">
+            @try
+            {
+             @Model.Queries.Namespace   
+            }
+            catch
+            {
+                <span>not implemented</span>
+            }</div>
     </div>
 </fieldset>
