--- a/src/AgentConsole/Forms/Error.xml
+++ b/src/AgentConsole/Forms/Error.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ConsoleForm Name="Configuration Error - Euclid Console Hosting Fabric" Width="125" Height="50">
+<ConsoleForm Name="Error - Euclid Agent Console" Width="125" Height="50">
 	<Lines>
 		<Line Orientation="Horizontal" Length="125" Colour="DarkRed">
 			<Location X="0" Y="0" />
@@ -18,7 +18,7 @@
 		</Line>
 	</Lines>
 	<Labels>
-		<Label Name="greeting" Text="Euclid Console Hosting Fabric" Length="30" ForeColour="White" BackColour="DarkRed">
+		<Label Name="greeting" Text="Euclid Agent Console" Length="30" ForeColour="White" BackColour="DarkRed">
 			<Location X="1" Y="1" />
 		</Label>
 		<Label Name="agentCount" Text="Agents: 0" Length="10" ForeColour="White" BackColour="DarkRed">
