--- a/src/AgentConsole/Forms/Main.xml
+++ b/src/AgentConsole/Forms/Main.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ConsoleForm Name="Euclid Console Hosting Fabric" Width="125" Height="50">
+<ConsoleForm Name="Euclid Agent Console" Width="125" Height="50">
 	<Lines>
 		<Line Orientation="Horizontal" Length="125" Colour="DarkGreen">
 			<Location X="0" Y="0" />
@@ -18,7 +18,7 @@
 		</Line>
 	</Lines>
 	<Labels>
-		<Label Name="greeting" Text="Euclid Console Hosting Fabric" Length="30" ForeColour="White" BackColour="DarkGreen">
+		<Label Name="greeting" Text="Euclid Agent Console" Length="30" ForeColour="White" BackColour="DarkGreen">
 			<Location X="1" Y="1" />
 		</Label>
 		<Label Name="agentCount" Text="Agents: 0" Length="10" ForeColour="White" BackColour="DarkGreen">
@@ -26,6 +26,9 @@
 		</Label>
 		<Label Name="status" Text="Status: Error Free" Length="18" ForeColour="White" BackColour="DarkGreen">
 			<Location X="95" Y="1" />
+		</Label>
+		<Label Name="statistics" Text="{Stats here}" Length="18" ForeColour="White" BackColour="Black">
+			<Location X="2" Y="5" />
 		</Label>
 	</Labels>
 	<Textboxes/>
