--- a/tests/Euclid.Composite.MvcApplication/Views/Agents/InspectCommand.cshtml
+++ b/tests/Euclid.Composite.MvcApplication/Views/Agents/InspectCommand.cshtml
@@ -16,3 +16,5 @@
 }
 
 <a href="@Url.Action("Parts", "Agents", new { agentSystemName = Model.AgentSystemName, partType = "Commands" })">Commands in @Model.AgentSystemName</a>
+<br/>
+<a href="@Url.Action("Index")">Agents in composite</a>
