--- a/tests/Euclid.Composite.MvcApplication/Views/Agents/Inspect.cshtml
+++ b/tests/Euclid.Composite.MvcApplication/Views/Agents/Inspect.cshtml
@@ -7,45 +7,45 @@
 
 @if (Model.TypeMetadata.Properties.Count() > 0)
 {
-    <h3>Properties</h3>
-    <ul>
-    @foreach (var p in Model.TypeMetadata.Properties)
-    {
-        <li>@p.Name (@p.PropertyType.Name)</li>
-    }
-    </ul>
+	<h3>Properties</h3>
+	<ul>
+		@foreach (var p in Model.TypeMetadata.Properties)
+		{
+			<li>@p.Name (@p.PropertyType.Name)</li>
+		}
+	</ul>
 }
 
 @if (Model.TypeMetadata.Methods.Count() > 0)
 {
-    <h3>Methods</h3>
-    <ul>
-    @foreach (var m in Model.TypeMetadata.Methods)
-    {
-        var sb = new StringBuilder();
-        foreach (var a in m.Arguments)
-         {
-             if (sb.Length > 0)
-             {
-                 sb.Append(", ");
-             }
+	<h3>Methods</h3>
+	<ul>
+		@foreach (var m in Model.TypeMetadata.Methods)
+		{
+			var sb = new StringBuilder();
+			foreach (var a in m.Arguments)
+			{
+				if (sb.Length > 0)
+				{
+					sb.Append(", ");
+				}
 
-             sb.AppendFormat("{0} {1}", a.PropertyType.Name, a.Name);
-             
-             if (a.DefaultValue != null)
-             {
-                 sb.AppendFormat("<i>={0}</i>", a.DefaultValue);
-             }
-         }
+				sb.AppendFormat("{0} {1}", a.PropertyType.Name, a.Name);
 
-        <li>
-            @m.ReturnType
-            @m.Name (@Html.Raw(sb.ToString()))
-        </li>
-    }
-    </ul>
+				if (a.DefaultValue != null)
+				{
+					sb.AppendFormat("<i>={0}</i>", a.DefaultValue);
+				}
+			}
+
+			<li>
+				@m.ReturnType
+				@m.Name (@Html.Raw(sb.ToString()))
+			</li>
+		}
+	</ul>
 }
 
-<a href="@Url.Action("Parts", "Agents", new { AgentSystemName = Model.AgentSystemName, PartTypeName = Model.PartType })">@Model.PartType in @Model.AgentSystemName</a>
+<a href="@Url.Action("Parts", "Agents", new {Model.AgentSystemName, PartTypeName = Model.PartType})">@Model.PartType in @Model.AgentSystemName</a>
 <br/>
 <a href="@Url.Action("Index")">Agents in composite</a>
