--- a/tests/Euclid.Composite.MvcApplication/Views/Agents/Index.cshtml
+++ b/tests/Euclid.Composite.MvcApplication/Views/Agents/Index.cshtml
@@ -12,17 +12,17 @@
 				<ul>
 					@if (agent.Commands.Count > 0)
 					{
-						<li><a href="@Url.Action("Parts", "Agents", new {agentSystemName = @agent.SystemName, partType = "Commands"})">Commands</a></li>
+						<li id="@agent.SystemName-commands"><a href="@Url.Action("Parts", "Agents", new {agentSystemName = @agent.SystemName, partType = "Commands"})">Commands</a></li>
 					}
                 
 					@if (agent.Queries.Count > 0)
 					{
-						<li><a href="@Url.Action("Parts", "Agents", new {agentSystemName = @agent.SystemName, partType = "Queries"})">Queries</a></li>
+						<li id="@agent.SystemName-queries"><a href="@Url.Action("Parts", "Agents", new {agentSystemName = @agent.SystemName, partType = "Queries"})">Queries</a></li>
 					}
                 
 					@if (agent.ReadModels.Count > 0)
 					{
-						<li><a href="@Url.Action("Parts", "Agents", new {agentSystemName = @agent.SystemName, partType = "ReadModels"})">Read Models</a></li>
+						<li id="@agent.SystemName-readmodels"><a href="@Url.Action("Parts", "Agents", new {agentSystemName = @agent.SystemName, partType = "ReadModels"})">Read Models</a></li>
 					}
 				</ul>
 			</div>
