--- a/tests/Euclid.Composite.MvcApplication/Views/Agents/Parts.cshtml
+++ b/tests/Euclid.Composite.MvcApplication/Views/Agents/Parts.cshtml
@@ -7,7 +7,7 @@
 	@foreach (var m in Model.Parts)
 	{
 		<li>
-			<a href="@Url.Action(Model.NextActionName, "Agents", new {agentSystemName = Model.AgentSystemName, partType = Model.PartTypeName, partName = m.Name})">
+			<a href="@Url.Action("Inspect", "Agents", new {agentSystemName = Model.AgentSystemName, partType = Model.PartTypeName, partName = m.Name})">
 				@Model.Parts.Namespace.@m.Name
 			</a>
 		</li>
